apps/base/steam-cache/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: steam-cache
spec:
  selector:
    app: steam-cache
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
