apps/base/steam-cache/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: steam-cache
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`steam-cache.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: steam-cache
          port: http
      middlewares:
        - name: default-headers
  tls:
    secretName: local-hejsan-xyz-tls
